fixed image issue

--- a/views/products/single.ejs
+++ b/views/products/single.ejs
@@ -9,7 +9,7 @@
         <div class="card-header"><%=product.name%></div>
 
         <div class="card-body">
-          <img src="<%=product.productImg%>" alt="..." class="card-img" />
+          <img src="/<%=product.productImg%>" alt="..." class="card-img" />
           <p><%= product.description%></p>
           <a href="/product/edit/<%=product._id%>" class="btn btn-secondary"
             >edit product</a
