--- a/views/products/create.ejs
+++ b/views/products/create.ejs
@@ -7,7 +7,7 @@
     <form
       action=""
       enctype="multipart/form-data"
-      method="post"
+      method="POST"
       class="container"
     >
       <div class="form-group">
