finished file upload and created user model

--- a/views/products/create.ejs
+++ b/views/products/create.ejs
@@ -4,12 +4,7 @@
   <body>
     <%- include('../includes/navbar.ejs')%>
     <h1>create product</h1>
-    <form
-      action=""
-      enctype="multipart/form-data"
-      method="post"
-      class="container"
-    >
+    <form enctype="multipart/form-data" method="post" class="container">
       <div class="form-group">
         <input type="text" name="name" id="name" class="form-control" />
       </div>
