--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -2,5 +2,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/bootstrap.min.css" />
-  <title><%=title%></title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <title><%= title || 'express app' %></title>
 </head>
