--- a/views/products/create.ejs
+++ b/views/products/create.ejs
@@ -3,60 +3,116 @@
   <%- include('../includes/head.ejs') %>
   <body>
     <%- include('../includes/navbar.ejs')%>
-    <h1>create product</h1>
-    <form
-      action="/product/create"
-      enctype="multipart/form-data"
-      method="POST"
-      class="container"
-    >
-      <div class="form-group">
-        <input type="text" name="name" id="name" class="form-control" />
-      </div>
-      <div class="form-group">
-        <label
-          >Female:
-          <input type="checkbox" name="gender" value="female" />
-        </label>
-        <label for="">
-          Male
-          <input type="checkbox" name="gender" value="male" />
-        </label>
-      </div>
-      <div class="form-group">
-        Colors
-        <label
-          >red:
-          <input type="checkbox" name="color" value="female" />
-        </label>
-        <label for="">
-          green
-          <input type="checkbox" name="color" value="male" />
-        </label>
-        <label for="">
-          black
-          <input type="checkbox" name="color" value="black" />
-        </label>
-        <label for="">
-          white
-          <input type="checkbox" name="color" value="white" />
-        </label>
-      </div>
-      <div class="form-group">
-        <textarea
-          name="description"
-          id="description"
-          class="form-control"
-        ></textarea>
-      </div>
-      <div class="form-group">
-        <input type="file" name="productImg" id="productImg" />
-      </div>
-      <input
-        type="submit"
-        value="add product"
-        class="btn btn-block btn-primary"
-      />
-    </form>
+
+    <div class="card container mt-5">
+      <h1 class="text-center my-3">create product</h1>
+      <form
+        action="/product/create"
+        enctype="multipart/form-data"
+        method="POST"
+        class="container"
+      >
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label for="inputEmail4">product name</label>
+            <input name="name" id="name" class="form-control" />
+          </div>
+        </div>
+
+        gender
+        <div class="form-row mb-5">
+          <div class="form-group col-md-6">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                name="gender"
+                value="male"
+                type="checkbox"
+                id="male"
+              />
+              <label class="form-check-label" for="male"> Male </label>
+            </div>
+          </div>
+          <div class="form-group col-md-6">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                name="gender"
+                value="female"
+                id="female"
+              />
+              <label class="form-check-label" for="female"> Female </label>
+            </div>
+          </div>
+        </div>
+        <div class="form-group mb-5">
+          <label for="product-img">Example file input</label>
+          <input
+            type="file"
+            name="productImg"
+            class="form-control-file"
+            id="product-img"
+          />
+        </div>
+        available colours
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                name="color"
+                value="red"
+                type="checkbox"
+                id="red"
+              />
+              <label class="form-check-label" for="red"> Red </label>
+            </div>
+          </div>
+          <div class="form-group col-md-4">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                name="green"
+                type="checkbox"
+                id="green"
+              />
+              <label
+                class="form-check-label"
+                name="color"
+                value="green"
+                for="grfeen"
+              >
+                Green
+              </label>
+            </div>
+          </div>
+          <div class="form-group col-md-4">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                name="color"
+                value="black"
+                id="black"
+              />
+              <label class="form-check-label" for="black"> Black </label>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <textarea
+            name="description"
+            id="description"
+            cols=""
+            rows="10"
+            class="form-control"
+          ></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">
+          Add Product female
+        </button>
+      </form>
+    </div>
   </body>
 </html>
