--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,10 @@
   font-weight: 900;
   line-height: 1.2;
 }
+
+.error-text {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font-size: 1.5em;
+  font-weight: 300;
+}
