--- a/views/404.ejs
+++ b/views/404.ejs
@@ -10,8 +10,10 @@
     >
       <h1 class="display-1 mt-5 error-header">404</h1>
       <div class="error-body text-center">
-        <p>page not found</p>
-        <p>the page you are looking for does not exist or maybe moved</p>
+        <p class="error-text">page not found</p>
+        <p class="error-text">
+          the page you are looking for does not exist or maybe moved
+        </p>
         <h4><a href="/">go back to home page</a></h4>
       </div>
     </div>
